# RedBull-Tetris-AI

./: .gitignore  README.md  install.ps1  pyproject.toml
scripts/: test_red_bull_tetris.py  train_block_recognizer.py  train_tetris_dqn_agent.py
src/red_bull_tetris_ai/: utils.py
src/red_bull_tetris_ai/agent/: __init__.py  memory.py  red_bull_tetris_dqn_agent.py  tetris_dqn_agent.py
src/red_bull_tetris_ai/env/: __init__.py
src/red_bull_tetris_ai/env/red_bull_tetris/: __init__.py  block_recognizer.py  frame.py  red_bull_tetris.py  script.js  state.py
src/red_bull_tetris_ai/env/red_bull_tetris/images/: __init__.py
src/red_bull_tetris_ai/env/tetris/: __init__.py  action.py  bag.py  game_board.py  score_board.py  score_multiplier_meter.py  scoring.py  special_item_meter.py  state.py  tetrimino.py  tetris.py  upper_board.py
src/red_bull_tetris_ai/env/tetris/assets/: __init__.py
